--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,12 +1,31 @@
-.containerHome {
+.containerSaludo {
   width: 100%;
   height: 6vh;
+  margin: 0;
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: yellow;
+  background-image: url("https://res.cloudinary.com/dpmexolyn/image/upload/v1682380801/banner_iccamw.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   color: black;
+  text-shadow: whitesmoke;
+  font-weight: bold;
+  text-shadow: 1px 1px 4px white;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: 1rem;
+}
+
+.containerPromo {
+  background-color: black;
+  color: yellow;
+  text-align: center;
+  align-items: center;
+  margin: 0;
+  padding: 4px;
+  letter-spacing: 2px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
