--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -44,3 +44,8 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: 2px;
 }
+
+.buttonCart {
+  padding: 10px;
+  margin: 10px;
+}
